feat : #130 생성자 매개변수 추가(BookExtraInfo 엔티티)